# home-bot

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  bot.py  docker-compose.yml  pyproject.toml  ТЗ.txt
migrations/: env.py
migrations/versions/: 89960dc37234_add_on_delete_for_house.py  90ed561e4b22_initial.py
tgbot/: config.py
tgbot/database/: __init__.py  engine.py
tgbot/database/models/: house.py  residential_complex.py
tgbot/filters/: admin.py
tgbot/handlers/admin/: router.py  start.py
tgbot/handlers/admin/house/: handlers.py
tgbot/handlers/admin/residential_complex/: handlers.py
tgbot/handlers/common/: handlers.py
tgbot/handlers/user/: handlers.py  router.py  start.py
tgbot/keyboards/inline/admin/: callbacks.py  keyboards.py
tgbot/keyboards/inline/common/: callbacks.py  keyboards.py
tgbot/keyboards/inline/user/: callbacks.py  keyboards.py
tgbot/middlewares/: admin.py
tgbot/misc/: states.py
tgbot/models/: district.py  house.py  residential_complex.py
tgbot/services/: house.py  residential_complex.py
tgbot/utils/: formatting.py
