[tool.poetry]
name = "home-bot"
version = "0.1.0"
description = ""
authors = ["s1veme <kpdpav@gmail.com>"]
readme = "README.md"
packages = [{include = "home_bot"}]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = {version = "^3.0.0b7", allow-prereleases = true}
alembic = "^1.9.4"
sqlalchemy = "^2.0.4"
environs = "^9.5.0"
sqlalchemy-utils = "^0.40.0"
asyncpg = "^0.27.0"
psycopg2 = "^2.9.5"


[tool.poetry.group.dev.dependencies]
black = {extras = ["d"], version = "^23.1.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py39", "py310"]
include = ".py$"
force-exclude = """
migrations
| .venv
| venv
"""

[tool.isort]
profile="black"
line_length=120
extend_skip_glob = [
  "migrations/*",
  ".venv/*",
  "venv/*"
]